Fix: header menu buttons Feat: External links moved to right sidebar Fix: Dashboard Layout Breaking fixed

--- a/theme/public/css/theme.css
+++ b/theme/public/css/theme.css
@@ -282,7 +282,6 @@ ul.custom-right-navbar li a:active ,
 
 .custom-right-sidemenu .user-info {
   padding-top: 40px;
-  padding-bottom: 80px;
   width: 100%;
   text-align: center;
 }
@@ -742,7 +741,7 @@ a.dropdown-toggle:hover {
     opacity: 0.5;
 }
 
-.widget.dashboard-widget-box{
+.widget {
   background-color: white;
 }
 
@@ -778,9 +777,6 @@ dashboard-graph
 }
 .external-apps{
   width: 100%;
-  background: #FFFFFF 0% 0% no-repeat padding-box;
-  border-radius: 5px;
-  opacity: 1;
   padding:20px 10px;
   display: flex;
   flex-direction: row;
@@ -1089,19 +1085,13 @@ dashboard-graph
   color: #fff;
 }
 
-.loader.close {
-  opacity: 0;
-  transition: all ease-out 0.3s;
-}
-.loader.remove{
-  z-index: -10;
-  transition: all ease-out 0.6s;
-}
-
 .display-none{
   display: none !important;
 }
 
-.dashboard-graph{
-  display: flex;
+@media (min-width: 992px){
+  .custom-half-div {
+    width: 49%;
+    margin-right: 1%;
+  }
 }
